--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ header .logo{
     border-radius: 5px;
 }
 .nightMode{
-    background-color: blue;
+    background-color:darkgreen;
 }
 .dayMode{
     background-color: blueviolet;
@@ -46,21 +46,30 @@ a{
 }
 
 .hero {
-    background-color: lightgreen;
-    padding: 20px;
-    height: 95vh;
+    background-image:url(/images/nature.jpg);
+    height: 60vh;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: bold;
     font-size: 32px;
+    
+    margin-bottom: 50px;
 }
 
 footer {
     background-color: lightseagreen;
     padding: 20px;
     text-align: center;
+    margin-top: 30px;
+}
+.card-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 700px;
+    margin: auto;
 }
 .card{
     margin: 10px;
@@ -71,4 +80,12 @@ footer {
     border-radius: 10px;
     margin-bottom: 10px;
     object-fit: cover;
+}
+
+.card-container .card-flex {
+    flex:3;
+}
+
+.card-container aside {
+    flex:1; 
 }
