--- a/src/style.css
+++ b/src/style.css
@@ -64,15 +64,20 @@ footer {
     text-align: center;
     margin-top: 30px;
 }
-.card-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 700px;
-    margin: auto;
-}
+
+
+
+
+aside {
+    background-color: red;
+    }
 .card{
+    background-color: blueviolet;
     margin: 10px;
+    padding: 10px;
+    width: 230px;
+    border-radius: 5px;
+
 }
 .card img{
     height: 200px;
@@ -82,10 +87,34 @@ footer {
     object-fit: cover;
 }
 
-.card-container .card-flex {
-    flex:3;
+
+.card button {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin-top: 15px;
+    border-radius:5px;
+}
+.card-container {
+    display: flex;
+    
+}
+.container{
+    display: flex;
+
 }
 
-.card-container aside {
-    flex:1; 
+.active button {
+    background-color: red ;
 }
+
+.card button:hover {
+    background-color: orange;
+}
+/* .card-container .card-flex{
+    flex: 3;
+}
+.card-container aside {
+    flex: 1;
+} */
+
